[Update] grafana env 추가 (for worldMap panel)
	수정함:        docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,8 @@ services:
     restart: always
     ports:
       - 3000:3000
+    environment:
+      - GF_INSTALL_PLUGINS=grafana-worldmap-panel
     depends_on:
       - postgres
       - kafka-single-node
