[Modify] default 생성 유저 작성 ```scott/tiger```
	새 파일:       StreamHandler/src/resources/secrets/secrets.json
	수정함:        docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,9 @@ services:
     tty: true        # -t option
     volumes:
       - .:/root/fake-data-pipeline/.
-    ports: 
+    ports:
       - 28088:8088
-    environment: 
+    environment:
       - SLAVE_NUM=3
     depends_on:
       - slave-1
@@ -77,8 +77,8 @@ services:
     hostname: postgresql
     restart: always
     environment:
-      # - POSTGRES_USER=<user>
-      # - POSTGRES_PASSWORD=<password>
+      - POSTGRES_USER=scott
+      - POSTGRES_PASSWORD=tiger
       - POSTGRES_HOST_AUTH_METHOD=trust
       - POSTGRES_DB=pipeline_db
     networks:
